[package]
name = "downtobox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.6"

clap = { version = "4.3.23", features = ["derive"] }
chrono = "0.4.26"
color-eyre = "0.6.2"
directories = "5.0.1"
reqwest = { version = "0.11.18", features = ["multipart", "stream"] }
rs-uptobox = { git = "https://github.com/Mageas/rs-uptobox.git", branch = "main" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures-util = "0.3.28"
regex = "1.9.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.6"
itertools = "0.11.0"
